Avoid showing titlebox over infobox on mobile

--- a/main.css
+++ b/main.css
@@ -229,7 +229,7 @@ a {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 99;
   margin-left: 20px;
   padding: 15px;
   background: linear-gradient(180deg,
@@ -303,13 +303,12 @@ a {
   }
 
   #titlebox {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     z-index: 50;
     max-width: 90vw;
     padding: 0.5rem 1rem;
-    pointer-events: none;
   }
 
   #titlebox h1 {
